feat: refactoring code before providing new default values in target